<resources>
    <string name="app_name">Paldle</string>
    <string name="paldex">Paldex</string>
    <string name="hintET">Enter the pal\'s name</string>
    <string name="imagenotworking">imageNotWorking</string>
    <string name="guess">Guess</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="types">Type</string>
    <string name="size">Size</string>
    <string name="guesss">Guess</string>
    <string name="share">Share</string>
    <string name="enter_a_pal_name">Enter a Pal Name</string>
    <string name="Text_GuessName_Button">Random guess Game</string>
    <string name="Text_GuessDesc_Button">Description guess Game</string>
    <string name="Text_GuessSil_Button">Silhouette guess Game</string>
    <string name="Credit">GVOKA Soan, ECHENIQUE Lucas, MAIRE Erwan  -  Projet Paldle</string>
</resources>